<resources>
    <string name="app_name">Simple Random Numbers</string>
    <string name="action_settings">Settings</string>

    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d20">d20</string>
    <string name="roll">Roll</string>
    <string name="add">Add</string>
    <string name="dices_label">Dices:</string>
    <string name="extra_label">Extra:</string>

    <string name="nothing_returned">Nothing returned from server.</string>
    <string name="error_getting_numbers">There was an error trying to get the numbers. Please try again.</string>
</resources>
